# doc2docx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/doc2docx/: __init__.py  cli.py  converter.py  diagnostics.py  errors.py  oleps.py
src/doc2docx/binary/: __init__.py  reader.py
src/doc2docx/cfb/: __init__.py  constants.py  container.py  directory.py  header.py  writer.py
src/doc2docx/model/: __init__.py  document.py
src/doc2docx/msdoc/: __init__.py  bookmarks.py  comments.py  document_properties.py  encryption.py  endnotes.py  fib.py  fields.py  floating_pictures.py  floating_shapes.py  fonts.py  footnotes.py  formatting.py  header_textboxes.py  headers.py  notes.py  number_formats.py  numbering.py  objects.py  officeart.py  pictures.py  pieces.py  sections.py  sprm.py  styles.py
src/doc2docx/ooxml/: __init__.py  package.py
tests/: fixtures.py  test_binary.py  test_bookmarks.py  test_cfb.py  test_cli.py  test_comments.py  test_conversion.py  test_core_properties.py  test_fields.py  test_floating_pictures.py  test_floating_shapes.py  test_fonts_styles.py  test_footnotes.py  test_headers.py  test_model.py  test_numbering.py  test_objects.py  test_officeart.py  test_pictures.py  test_pieces.py  test_sections.py  test_sprm.py  test_tables.py
