[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2docx"
version = "0.4.0"
description = "A specification-driven, pure-Python Word binary .doc to .docx converter"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "doc2docx contributors"}]
dependencies = []

[project.scripts]
doc2docx = "doc2docx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
