[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "msdoc2docx"
version = "0.24.0"
description = "A specification-driven, pure-Python Word binary .doc to .docx converter"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "doc2docx contributors"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/HuiTurn/doc2docx"
Repository = "https://github.com/HuiTurn/doc2docx"
Issues = "https://github.com/HuiTurn/doc2docx/issues"

[project.scripts]
doc2docx = "doc2docx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
